# accelerator-hackathon

./: .env.example  .gitignore  .mcp.json  ADLC.md  MODEL_SELECTION.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
agentkit/: __init__.py  evals.py  llm.py  loop.py  route.py
docs/: CONTRIBUTING.md
mcp/: semantic_scholar.py  server.py
projects/: unpaid-ra
projects/chief-of-staff/chief-of-stuff/: README.md  agent.py
projects/everyday/fridge-whisperer/: README.md  agent.py
projects/everyday/paypah-trail/: README.md  agent.py
projects/fun/dungeon-mastah/: README.md  agent.py
projects/fun/wicked-smaht-bahtendah/: README.md  agent.py
projects/social-good/qrious-citizen/: README.md  agent.py
projects/social-good/storm-ready/: README.md  agent.py
projects/unpaid_ra/: agent.py  dispatcher.py  events.py  trace.jsonl
projects/unpaid_ra/agents/: _util.py  gap_synthesizer.py  idea_generator.py  paper_fetcher.py  query_expander.py  summarizer.py
projects/unpaid_ra/evals/: benchmark.json  evals.json  run_evals.py
projects/unpaid_ra/fixtures/: demo_trace.jsonl  last_run.json  papers.json
projects/unpaid_ra/planner/: planner.py
projects/unpaid_ra/router/: router.py
projects/unpaid_ra/ui/: app.py  index.html
projects/wildcards/model-matchmakah/: README.md  agent.py
templates/: ADLC.md.template  MODEL_SELECTION.md.template  README-project.md.template  SKILL.md.template  evals.json.template
tests/: conftest.py  manual_loop_smoke.py  smoke.sh  test_agentkit.py  test_evals_selftest.py  verify.sh
tools/: lint_readmes.py
(+146 files in other folders)
